<resources>
    <string name="app_name">BikeAround</string>
    <string name="contact">Contact</string>
    <string name="checkout">Checkout</string>
    <string name="select_date">Checkout date:</string>
    <string name="select_rate">Select your rate:</string>
    <string name="option1">$20/Hour</string>
    <string name="option2">$45/Day</string>
    <string name="option3">$100/Week</string>
    <string name="total">Total cost:</string>
    <string name="zero_dollars">0.00</string>
    <string name="flat_fee_dollars">5.00</string>
    <string name="pay">Pay</string>
    <string name="flat_fee">Flat fee:</string>
    <string name="rate_charge">Rate charge:</string>
    <string name="plus_sign">+</string>
    <string name="dollar_sign">$</string>
    <string name="duration">Duration</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main_java">MainJavaActivity</string>
    <string name="content_success">Public Token:\n%1$s\n\n Account Id:\n%2$s\n\n Account Name:\n%3$s\n\n Institution Id:\n%4$s\n\n Institution Name:\n%5$s</string>
    <string name="content_cancelled">Institution Id:\n%1$s\n\n Institution Name:\n%2$s\n\n Link Session Id:\n%3$s\n\n Status:\n%4$s</string>
    <string name="content_exit">Display Message:\n%1$s\n\n Error Code:\n%2$s\n\n Error Message:\n%3$s\n\n Institution Id:\n%4$s\n\n Institution Name:\n%5$s\n\n Status:\n%6$s</string>
    <string name="content_exception">Exception Class:\n%1$s\n\n Exception Message:\n%2$s</string>
    <string name="show_java">Show Java</string>
    <string name="show_kotlin">Show Kotlin</string>
</resources>
